--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "1.1.0",
-    "apexcharts": "3.6.3",
+    "apexcharts": "^3.6.3",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -26,7 +26,7 @@
     "moment": "2.29.0",
     "openzeppelin-solidity": "2.1.3",
     "react": "16.13.1",
-    "react-apexcharts": "1.3.7",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "1.3.0",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
